unpackaged/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Edition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Edition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>