unpackaged/main/default/objects/Event__c/fields/CreditController__c.field-meta.xml
<CustomField>
    <fullName>CreditController__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold the name of the credit controller for this event.</description>
    <inlineHelpText>Please enter the credit controller for this event.</inlineHelpText>
    <label>Credit Controller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Editions</relationshipName>
    <type>Lookup</type>
</CustomField>