unpackaged/main/default/objects/Event__c/fields/Days_to_Edition__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Edition__c</fullName>
    <description>The number of days until the edition. Initially introduced with SOM-2039</description>
    <formula>Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days until the edition.</inlineHelpText>
    <label>Days to Edition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>