unpackaged/main/default/objects/Event__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>MEAA</fullName>
            </value>
            <value>
                <fullName>Non Trading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>