unpackaged/main/default/objects/Event__c/fields/Edition_Brand__c.field-meta.xml
<CustomField>
    <fullName>Edition_Brand__c</fullName>
    <label>Edition Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABILITIESme</fullName>
            </value>
            <value>
                <fullName>ADIPEC</fullName>
            </value>
            <value>
                <fullName>ADIPEC Conference</fullName>
            </value>
            <value>
                <fullName>ADIPEC Publication</fullName>
            </value>
            <value>
                <fullName>Africa Energy Forum</fullName>
            </value>
            <value>
                <fullName>Africa Renewable Energy Leaders Summit</fullName>
            </value>
            <value>
                <fullName>Africas Big 7</fullName>
            </value>
            <value>
                <fullName>AGPC</fullName>
            </value>
            <value>
                <fullName>Angola Energy &amp; Mining</fullName>
            </value>
            <value>
                <fullName>APAC Small Mid-Scale LNG Forum</fullName>
            </value>
            <value>
                <fullName>ASEAN Energy Business Forum</fullName>
            </value>
            <value>
                <fullName>Asia Clean Energy Summit</fullName>
            </value>
            <value>
                <fullName>Asia Coating Congress Vietnam</fullName>
            </value>
            <value>
                <fullName>Asia Pacific Coatings Journal</fullName>
            </value>
            <value>
                <fullName>Asia Pacific Coatings Show</fullName>
            </value>
            <value>
                <fullName>Asia Pacific Geothermal Energy Forum</fullName>
            </value>
            <value>
                <fullName>Atlantic Canada Petroleum Show</fullName>
            </value>
            <value>
                <fullName>BIOGAS</fullName>
            </value>
            <value>
                <fullName>Black Sea Oil &amp; Gas Forum</fullName>
            </value>
            <value>
                <fullName>CACS - Kazakhstan</fullName>
            </value>
            <value>
                <fullName>Canada Gas &amp; LNG Exhibition &amp; Conference</fullName>
            </value>
            <value>
                <fullName>Canadian Global Exploration Forum</fullName>
            </value>
            <value>
                <fullName>Canadian Hydrogen Convention</fullName>
            </value>
            <value>
                <fullName>CANWELD Expo &amp; Conference</fullName>
            </value>
            <value>
                <fullName>Cape Construction Expo</fullName>
            </value>
            <value>
                <fullName>Cape Industries Showcase</fullName>
            </value>
            <value>
                <fullName>Caspian Gas Supply</fullName>
            </value>
            <value>
                <fullName>Central &amp; Eastern European Gas Conference</fullName>
            </value>
            <value>
                <fullName>CHEMLAB</fullName>
            </value>
            <value>
                <fullName>China LNG &amp; Gas International Exhibition &amp; Summit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>