unpackaged/main/default/objects/Event__c/fields/Edition_Category__c.field-meta.xml
<CustomField>
    <fullName>Edition_Category__c</fullName>
    <label>Edition Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Physical - Insurance</fullName>
            </value>
            <value>
                <fullName>Virtual - Insurance</fullName>
            </value>
            <value>
                <fullName>Digital Product</fullName>
            </value>
            <value>
                <fullName>Publising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>