unpackaged/main/default/objects/Event__c/fields/Edition_End_Year__c.field-meta.xml
<CustomField>
    <fullName>Edition_End_Year__c</fullName>
    <formula>TEXT(YEAR(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edition End Year</label>
    <type>Text</type>
</CustomField>