unpackaged/main/default/objects/Event__c/fields/Edition_Proper_Name__c.field-meta.xml
<CustomField>
    <fullName>Edition_Proper_Name__c</fullName>
    <label>Edition Proper Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>