unpackaged/main/default/objects/Event__c/fields/EditionWebsite__c.field-meta.xml
<CustomField>
    <fullName>EditionWebsite__c</fullName>
    <description>This field is for the Edition website.</description>
    <inlineHelpText>Please enter the website for this Edition.</inlineHelpText>
    <label>Edition Website</label>
    <type>Url</type>
</CustomField>