unpackaged/main/default/objects/Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Edition Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Cost Ready</fullName>
            </value>
            <value>
                <fullName>Cost Revenue Ready</fullName>
            </value>
            <value>
                <fullName>Sales Closed</fullName>
            </value>
            <value>
                <fullName>Finance Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>